Search paging functionality. Ability to delete search documents. Search results view fixes. Gdn::Config() with no arguments will return the config object. DataSet now has a DefaultDatasetType property. Dataset now implements IteratorAggregtate. SqlDriver no longer looks for special characters on the value unless $EscapeValueSQL === FALSE. CommentScore plugin permission support.

--- a/plugins/CommentScore/commentscore.css
+++ b/plugins/CommentScore/commentscore.css
@@ -6,34 +6,36 @@
 }
 
 .Comment .CommentScore span {
-	color: #666;
-	font-size: 16px;
+	color: #777;
 	margin-left: 4px;
 	margin-right: 4px;
 }
 
 .Comment .CommentScore a {
-	color: #FFF;
-	font-size: 11px;
+	display: block;
 	padding: 2px;
+	border: solid 1px grey;
+	width: 20px;
 }
 
-.Comment .CommentScore a.Neg {
-	-moz-border-radius-bottomleft:5px;
-	-moz-border-radius-topleft:5px;
-	background: #FF6B39;
-	padding-left: 5px;
-}
-
-.Comment .CommentScore a.Pos {
-	-moz-border-radius-topright:5px;
-	-moz-border-radius-bottomright:5px;
-	background: #99FF00;
-	padding-right: 4px;
+.Comment .CommentScore a.Disabled {
+   -moz-user-select: none;
+   -khtml-user-select: none;
+   user-select: none;
+	cursor: default;
 }
 
 .Comment .CommentScore .Score {
-	
+	float: left;
+	font-size: 14px;
+}
+
+.Comment .CommentScore a.Neg {
+	float: left;
+}
+
+.Comment .CommentScore a.Pos {
+	float: right;
 }
 
 .Comment .CommentScore .Animate {
