--- a/applications/vanilla/design/vanilla.screen.css
+++ b/applications/vanilla/design/vanilla.screen.css
@@ -1,3 +1,376 @@
+@import url(reset.css);
+@import url(typography.screen.css);
+
+body {
+   background: #ffffff;
+   margin: 0px;
+   padding: 0px;
+   text-align: center;
+   font-size: small;
+   }
+.Hidden {
+   display: none;
+}
+#Head {
+   background: #44c7f4;
+   padding: 0px;
+   text-align: right;
+   height: 50px;
+}
+#Head h1 {
+   display: block;
+   font-size: 22px;
+   font-weight: bold;
+   margin: 0;
+   padding: 8px 0 0;
+}
+div#Head h1 a {
+   background: url('logo.vanilla.png') top left no-repeat;
+   display: block;
+   height: 40px;
+   width: 75px;
+   float: left;
+   margin: 2px 10px 0 0;
+}
+div#Head h1 a span {
+   display: none;
+}
+div.Menu {
+   text-align: right;
+   width: 960px;
+   margin: 0px auto;
+}
+ul#Menu {
+   float: left;
+   margin: 0px auto;
+   padding: 14px 0px 0px 10px;
+}
+#Head form {
+   float: right;
+   width: 250px;
+   background: #fff;
+   padding: 0;
+   margin: 4px 0 0;
+   -moz-border-radius: 2px;
+   -webkit-border-radius: 2px;
+}
+#Head form input.InputBox {
+   width: 204px;
+   border: 0;
+   padding: 4px 2px 4px 0;
+   background: #fff;
+   margin: 0;
+   -moz-border-radius-topleft: 2px;
+   -moz-border-radius-bottomleft: 2px;
+   -webkit-border-top-left-radius: 2px;
+   -webkit-border-bottom-left-radius: 2px;
+   color: #969696;
+   font-size: 13px;
+}
+#Head form input.Button {
+   border: 0;
+   width: 38px;
+   height: 26px;
+   background: #E9F9FF;
+   color: #2786C2;
+   padding: 3px 0 4px;
+   margin: 0;
+   -moz-border-radius: 0;
+   -webkit-border-radius: 0;
+   -moz-border-radius-topright: 2px;
+   -moz-border-radius-bottomright: 2px;
+   -webkit-border-top-right-radius: 2px;
+   -webkit-border-bottom-right-radius: 2px;
+}
+#Body {
+   width: 960px;
+   text-align: left;
+   margin: 15px auto 0px auto;
+   }
+#Content {
+   float: left;
+   width: 680px;
+}
+/* Progress Bars */
+.Loading {
+   height: 100px;
+   padding: 0px 20px;
+   background: url('progress.gif') center center no-repeat;
+}
+.Progress {
+   padding: 10px 40px 10px 0px;
+   background: url('progress.gif') center center no-repeat;
+}
+/* Messages */
+div.Messages {
+   text-align: center;
+   position: fixed;
+   top: 0;
+   left: 0;
+   z-index: 200;
+   margin: 0px !important;
+   padding: 0px !important;
+   list-style: none !important;
+   font-size: 12px;
+   display: block;
+   width: 100%;
+}
+* html div.Messages {
+  position: absolute;
+  width: 100%;/*IE5.5*/
+  top: 0;
+  left: 0;
+  overflow: visible; 
+  top: expression(eval(document.compatMode && document.compatMode=='CSS1Compat') ? documentElement.scrollTop : document.body.scrollTop);
+}
+div.Messages ul {
+   cursor: pointer;
+   width: auto !important;
+   border: 0 !important;
+   margin: 0 auto !important;
+   padding: 4px 8px !important;
+   -moz-border-radius-bottomleft: 2px;
+   -moz-border-radius-bottomright: 2px;
+   -webkit-border-bottom-left-radius: 2px;
+   -webkit-border-bottom-right-radius: 2px;
+   background: #ff9 !important;
+   display:-moz-inline-stack;
+   display:inline-block;
+   zoom:1;
+   *display:inline;
+}
+div.Messages ul li {
+   text-align: left !important;
+   border: 0 !important;
+   color: #000 !important;
+   padding: 0 !important;
+   margin: 0 !important;
+   list-style-position: outside;
+}
+
+div.Errors ul {
+   background: #d50a0a !important;
+}
+div.Errors ul li {
+   color: #fff !important;
+}
+
+.Warning {
+   background: #ff9;
+   color: #000;
+   padding: 3px 6px;
+   -moz-border-radius: 2px;
+   -webkit-border-radius: 2px;
+}
+
+/* Close buttons */
+a.Close {
+   font-weight: bold;
+   font-family: tahoma;
+   font-size: 10px;
+   text-transform: uppercase;
+   color: #bbb;
+   background: #f9f9f9;
+   -moz-border-radius: 8px;
+   -webkit-border-radius: 8px;
+   padding: 1px 4px 2px 5px;
+   margin: 0px;
+   line-height: 100%;
+   border: 1px solid #ddd;
+}
+a.Close:hover {
+   border: 1px solid #bbb;
+   color: #999;
+   background: #fff;
+}
+.Errors a.Close,
+.StatusMessage a.Close {
+   float: right;
+   color: #e4c100;
+   background: #ffffa4;
+   padding: 2px 4px 3px 5px;
+   margin: 2px 0px 0px;
+   display: block;
+   border: 1px solid #ffd800;
+}
+.Errors a.Close {
+   background: #e11414;
+   border: 1px solid #b00;
+   color: #ff6;
+}
+.Errors a.Close:hover {
+   color: #ff0;
+   background: #d11;
+   border: 1px solid #a00;
+}
+.StatusMessage a.Close:hover {
+   background: #ffffe2;
+}
+
+/* Panels */
+#Panel {
+   width: 250px;
+   float: right;
+}
+/* Panel Boxes */
+div.Box {
+   -moz-border-radius: 1px;
+   -webkit-border-radius: 1px;
+   background: #e9f9ff;
+   color: #999;
+   padding: 6px 10px;
+   margin: 0px 0px 10px 0px;
+}
+div.Box h4 {
+   font-size: 110%;
+   color: #2786c2;
+   font-weight: bold;
+   margin: 0px;
+   padding: 0px 0px 1px;
+   border-bottom: 1px solid #caf0fe;
+}
+div.Box dl {
+   border-bottom: 1px solid #caf0fe;
+   background: #f0fbff;
+   padding: 3px;
+   font-size: 90%;
+   overflow: hidden;
+}
+div.Box dl dt {
+   float: left;
+   width: 80px;
+   color: #0766a2;
+}
+div.Box dl dd {
+   margin-left: 80px;
+}
+div.Box p {
+   font-size: 100%;
+   padding: 0 0 4px;
+   color: #555;
+}
+
+/* Panel Info */
+ul.PanelInfo li {
+   background: #f5fcff;
+   border-bottom: 1px solid #caf0fe;
+   padding: 2px 4px;
+   font-family: tahoma;
+   font-size: 80%;
+   text-align: right;
+}
+ul.PanelInfo li h2 {
+   text-align: left;
+   display: inline;
+   font-size: 130%;
+   margin-right: 12px;
+}
+ul.PanelInfo li a {
+   float: left;
+}
+ul.PanelInfo li.Active {
+   background: #fff;
+   border-bottom: 1px solid #a3e6ff;
+}
+
+/* Foot */
+#Foot {
+   padding-top: 20px;
+   clear: both;
+}
+
+
+/* Pager */
+.MorePager {
+   list-style: none;
+   margin: 1px 0 0;
+   padding: 3px 6px;
+   text-align: right;
+   background: #e9f9ff;
+   }
+.MorePager a {
+   font-size: 12px;
+   font-weight: normal;
+   text-align: right;
+}
+.MorePager a:hover {
+   color: #2786c2 !important;
+   text-decoration: underline;
+}
+#PagerLess {
+   -moz-border-radius-topright: 2px;
+   -moz-border-radius-topleft: 2px;
+   -webkit-border-top-right-radius: 2px;
+   -webkit-border-top-left-radius: 2px;
+}
+tr#PagerMore td {
+   border: 0px;
+   text-align: right;
+}
+
+
+/* DataList (search results, vanilla discussions, drafts, etc) */
+
+ul.DataList {
+   border-top: 1px solid #dbe3e6;
+}
+ul.DataList li {
+   margin: 0px;
+   padding: 0px 0px 4px 0px;
+    border-bottom: 1px solid #dbe3e6;
+}
+ul.DataList li li {
+   border: 0px;
+   padding: 0px;
+}
+ul.DataList,
+ul.DataList li ul {
+   list-style: none;
+   margin: 0px;
+   padding: 0px;
+}
+ul.DataList li ul li.Title a {
+   border-left: 2px solid #dbe3e6;
+   margin: 8px 4px 6px 10px;
+   padding: 0px 0px 0px 8px;
+   line-height: 130%;
+   color: #2b3033;
+   font-size: 105%;
+   display: block;
+}
+ul.DataList li ul li.Title h3 {
+   padding: 6px 0px 0px 10px;
+   margin: 0px;
+   font-size: 110%;
+   font-weight: bold;
+}
+ul.DataList li ul li.Title h3 a {
+   display: inline;
+   border: 0px;
+   padding: 0px;
+   margin: 0px;
+   color: #2d7bb2;
+}
+ul.DataList li ul li.Meta {
+   font-family: tahoma;
+   margin-left: 9px;
+   font-size: 80%;
+   color: #80828c;
+}
+ul.DataList li ul li.Meta span,
+ul.DataList li ul li.Meta span a,
+ul.DataList li ul li.Meta strong {
+   margin-right: 12px;
+}
+ul.DataList li ul li.Meta strong {
+   background: #ff0;
+   padding: 0px 2px;
+}
+ul.DataList li ul li.Meta a {
+   color: #2b2d33;
+}
+
+
 /* Vanilla Categories */
 
 .Categories {
