--- a/applications/vanilla/design/layout.screen.css
+++ b/applications/vanilla/design/layout.screen.css
@@ -1,5 +1,5 @@
 body {
-   background: #ffffff;
+   background: #ffffff /* Body Background Color */;
    margin: 0px;
    padding: 0px;
    text-align: center;
