--- a/applications/garden/design/default.screen.css
+++ b/applications/garden/design/default.screen.css
@@ -1,3 +1,3 @@
-@import url(reset.css);
+@import url(reset.css) /* NoFollow */;
 @import url(typography.screen.css);
 @import url(layout.screen.css);
