--- a/applications/vanilla/design/layout.screen.css
+++ b/applications/vanilla/design/layout.screen.css
@@ -262,7 +262,7 @@ div.Box dl dd {
 div.Box p {
    font-size: 100%;
    padding: 0 0 4px;
-   color: #555;
+   color: #555 /* Body Text Font Color */;
 }
 /* Side Menu */
 ul.SideMenu,
@@ -402,7 +402,7 @@ ul.Activities li h3 a.Delete {
    border: 1px solid #bbb;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
-   color: #555;
+   color: #555 /* Body Text Font Color */;
    cursor: pointer;
    line-height: 100%;
 }
@@ -417,7 +417,7 @@ ul.Activities li blockquote {
    margin: 4px 4px 4px;
    padding: 2px 6px;
    background: #ffd;
-   color: #555;
+   color: #555 /* Body Text Font Color */;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
 }
