--- a/plugins/VanillaCommentReplies/style.css
+++ b/plugins/VanillaCommentReplies/style.css
@@ -10,7 +10,7 @@ li.Reply a.DeleteReply {
    border: 1px solid #bbb;
    -moz-border-radius: 2px;
    -webkig-border-radius: 2px;
-   color: #555;
+   color: #555 /* Body Text Font Color */;
    cursor: pointer;
    line-height: 100%;
 }
