--- a/plugins/Debugger/style.css
+++ b/plugins/Debugger/style.css
@@ -2,21 +2,22 @@ div.Vanilla #Foot {
    padding-bottom: 30px !important;
 }
 #Sql {
+   color: #000;
    background: #f3f3f3;
    padding: 10px 20px;
    margin: 10px 0px 0px;
    text-align: left;
-   }
+}
 #Sql pre {
    padding: 4px;
    margin: 4px 0px 2px;
    overflow: auto;
    font-size: 12px;
    background: #fafafa;
-   }
+}
 #Sql small {
    padding: 0px 4px;
    font-family: trebuchet ms;
    font-size: 12px;
    color: #ff0084;
-   }
+}
