More CssTheme css support.

--- a/applications/vanilla/design/vanilla.screen.css
+++ b/applications/vanilla/design/vanilla.screen.css
@@ -438,7 +438,7 @@ body.Categories h1 a {
    text-align: right;
 }
 .Back a:hover {
-   color: #2786c2 /* Panel Hover Font Color */ !important;
+   color: #2786c2 /* Panel Font Color */ !important;
    text-decoration: underline;
 }
 .Back {
