--- a/applications/garden/design/layout.screen.css
+++ b/applications/garden/design/layout.screen.css
@@ -68,8 +68,8 @@ ul#Menu {
    border: 0;
    width: 38px;
    height: 26px;
-   background: #E9F9FF /* Panel Background Color */;
-   color: #2786C2 /* Panel Font Color */;
+   background: #E9F9FF;
+   color: #2786C2;
    padding: 3px 0 4px;
    margin: 0;
    -moz-border-radius: 0;
