--- a/applications/garden/design/form.screen.css
+++ b/applications/garden/design/form.screen.css
@@ -26,7 +26,7 @@ form ul li {
    color: #555 /* Body Text Font Color */;
 }
 form ul li label {
-   color: #222;
+   color: #222 /* Body Text Font Color */;
    float: left;
    display: block;
    width: 150px;
